test/parser/reject/rule-bad-prod.ptk
# expected: E1113
rule foo = `illegal here`;